k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-movies-myingress
  labels:
    name: go-movies-myingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: go-movies-service
            port: 
              number: 80
